# Qualitiy-Gate

./: .gitignore  .roomodes  CLAUDE.md  README.md  TODO  docs.md  pyproject.toml  selected_data.jsonl  selection_config.yaml  selection_doc.md
.claude/: index.json
configs/: CLAUDE.md  accelerate_config.yaml  accelerate_config_ddp.yaml  accelerate_config_fsdp.yaml  accelerate_config_fsdp_finetune.yaml  batch_selection.yaml  continue_selection.yaml  random_selection.yaml  stage_1_pretrain.yaml  stage_1_warmup.yaml  stage_2_select.yaml  stage_2_selection.yaml  stage_3_finetune.yaml  stage_3_finetune_noise.yaml  stage_4_eval.yaml  stage_4_evaluate.yaml
configs/accelerate_config/: FSDP.yaml  SINGLE.yaml
configs/training/: llama_2_7b.yaml  llama_3_8b.yaml  qwen_2.5_0.5b.yaml  qwen_2.5_1.5b.yaml  qwen_3_1.7b.yaml
data/: dummy_unlabeled_data.jsonl
docs/: README_continue_selection.md  custom_loss_fn.md  docs.md  gpu_fps_fixes_summary.md  router_data_format.md  sequence_length_sorting.md  shared_memory_usage.md  微调流水线.md  架构设想.md  模型定制与微调.md  设计规范.md  项目任务.md  项目设计.md
eval_tasks/gsm8k/: gsm8k_head100.yaml
examples/: README.md  analyze_router_data.py  comprehensive_analysis.py  load_full_rank_weights.py  load_trainer_checkpoint.py  visualize_custom_loss.py  visualize_fps_algorithm.py  visualize_wasserstein_distance.py
exp_scripts/: aggregate_eval_results.py  analyze_hidden_states.py  compare_router_data.py  compare_weights.py  diagnose_training.py  exp_train.py  experiment_tracker.py  extract_validation_data.py  generate_cache.py  gpu_memory.py  occupy_gpu_memory.py  test_encoding_modes.py  visualize_quality_distribution.py
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md
new_docs/: CLEANUP_LEGACY_FILES.md  CODE_REFACTOR_SELECTION_UTILS.md  LOSS_SIMPLIFICATION.md  QWEN3_MIGRATION.md  README_REFACTOR.md  quality_gate.md  自定义评测任务.md
ref_model/: olmoe_modeling.py
ref_model/moe_plus_plus/: configuration_moe_plus_plus.py  modeling_moe_plus_plus.py  moe_plus_plus_layer.py
ref_model/olmoe/: __init__.py  modeling_olmoe.py
scripts/: CLAUDE.md  batch_selection.py  compare_converted_model.py  compare_quality_gate_model.py  compare_router_weights.py  continue_selection.py  convert.sh  convert_olmoe_to_select_moe.py  convert_qwen_to_quality_gate.py  eval.sh  generate_faker_dataset.py  generate_noise_dataset.py  generate_table.py  inspect_checkpoint.py  make_result_table.py  random_selection.py  run_stage_1.sh  run_stage_1_ddp.sh  run_stage_2.sh  run_stage_3.sh  run_stage_3_GSM8K.sh  run_stage_3_noise.sh  run_stage_4.sh  run_test.sh  validate_gpu_silhouette.py  verify_changes.py
share_dataset/: __init__.py  client.py  config.py  manager.py  server.py
src/: main.py  modeling.py  trainer.py
src/clustering/: CLAUDE.md  __init__.py  cluster_selection.py  gpu_metrics.py  hdbscan_clustering.py  kmeans_clustering.py  parallel_kmeans.py
src/data/: CLAUDE.md  __init__.py  data_utils.py  dataset_loader.py  encoders.py  format_converters.py
src/models/: CLAUDE.md  __init__.py  select_moe.py  (+1 more)
tools/: chsrc  install.sh
utils/: tools.py
visual_analyse/: batch_visualize_quality_distribution.py  visualize_quality_distribution.py
(+19 files in other folders)
