[project]
name = "select-moe"
version = "0.1.0"
description = "..."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hydra-core",
    "torch==2.6.0",
    "transformers",
    "peft",
    "accelerate",
    "lm-eval",
    "torchvision>=0.21.0",
    "datasets",
    "scipy>=1.16.0",
    "matplotlib>=3.10.5",
    "seaborn>=0.13.2",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

